fix some more spacing issues on item lists

--- a/app/assets/stylesheets/components/_result_list.css.sass
+++ b/app/assets/stylesheets/components/_result_list.css.sass
@@ -135,7 +135,6 @@
   .cell-boolean,
     color: $medium-gray
 
-  .cell-display-field,
   .cell-name
     color: $dark-gray
     font-weight: 600
@@ -146,6 +145,7 @@
     padding-right: 1em
     text-overflow: ellipsis
 
+  .cell-name,
   .cell-display-name
     width: 13%
 
