--- a/app/assets/stylesheets/tabs/_asset_list.css.sass
+++ b/app/assets/stylesheets/tabs/_asset_list.css.sass
@@ -13,3 +13,5 @@
       width: 35%
     .cell-type
       width: 13%
+    .cell-select
+      width: 4%
